--- a/src/main/resources/com/lms/librarymanagementsystem/inventory.fxml
+++ b/src/main/resources/com/lms/librarymanagementsystem/inventory.fxml
@@ -8,7 +8,7 @@
 
 <AnchorPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.lms.librarymanagementsystem.controllers.InventoryController"
+            fx:controller="com.lms.librarymanagementsystem.InventoryController"
             prefHeight="400.0" prefWidth="600.0">
 
 </AnchorPane>
