--- a/src/main/resources/com/lms/librarymanagementsystem/search.fxml
+++ b/src/main/resources/com/lms/librarymanagementsystem/search.fxml
@@ -10,9 +10,9 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1500.0" style="-fx-background-color: #011B3E;" xmlns="http://javafx.com/javafx/17.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.lms.librarymanagementsystem.controllers.SearchController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1000.0" prefWidth="1500.0" style="-fx-background-color: #011B3E;" xmlns="http://javafx.com/javafx/17.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.lms.librarymanagementsystem.SearchController">
    <children>
-      <TableView fx:id="searchTableView" layoutX="24.0" layoutY="50.0" prefHeight="400.0" prefWidth="1450.0" style="-fx-cursor: hand;">
+      <TableView fx:id="searchTableView" layoutX="24.0" layoutY="50.0" prefHeight="800.0" prefWidth="1450.0" style="-fx-cursor: hand;">
          <columns>
             <TableColumn fx:id="mediaIdColumn" maxWidth="35.0" minWidth="25.0" prefWidth="25.0" text="ID" />
             <TableColumn fx:id="titleColumn" maxWidth="1400.0" minWidth="100.0" prefWidth="100.0" text="Titel" />
@@ -20,6 +20,7 @@
             <TableColumn fx:id="categoryColumn" maxWidth="1000.0" minWidth="50.0" prefWidth="50.0" text="Kategori" />
             <TableColumn fx:id="descriptionColumn" maxWidth="1400.0" minWidth="100.0" prefWidth="100.0" text="Beskrivning" />
             <TableColumn fx:id="publisherColumn" maxWidth="200.0" minWidth="50.0" prefWidth="50.0" text="Utgivare" />
+            <TableColumn fx:id="editionColumn" maxWidth="150.0" minWidth="50.0" prefWidth="50.0" text="Utgåva" />
             <TableColumn fx:id="authorColumn" maxWidth="1400.0" minWidth="50.0" prefWidth="50.0" text="Författare" />
             <TableColumn fx:id="isbnColumn" maxWidth="200.0" minWidth="50.0" prefWidth="50.0" text="ISBN" />
             <TableColumn fx:id="directorColumn" maxWidth="1500.0" minWidth="50.0" prefWidth="50.0" text="Regissör" />
@@ -33,9 +34,9 @@
          </columnResizePolicy>
       </TableView>
       <TextField fx:id="searchTextField" layoutX="59.0" layoutY="14.0" prefHeight="25.0" prefWidth="1415.0" promptText="Ange nyckelord" style="-fx-cursor: text;" />
-      <Button fx:id="loginButton" layoutX="1249.0" layoutY="551.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="225.0" style="-fx-background-color: #f0f0f0; -fx-cursor: hand;" text="Logga in" textFill="#011b3e">
+      <Button fx:id="loginButton" layoutX="1261.0" layoutY="925.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="225.0" style="-fx-background-color: #f0f0f0; -fx-cursor: hand;" text="Logga in" textFill="#011b3e">
          <font>
-            <Font name="System Bold" size="14.0" />
+            <Font name="System Bold" size="16.0" />
          </font>
       </Button>
       <Label alignment="CENTER_RIGHT" layoutY="14.0" prefHeight="25.0" prefWidth="49.0" text="Sök" textFill="#f0f0f0">
@@ -43,17 +44,17 @@
             <Font name="System Bold" size="14.0" />
          </font>
       </Label>
-      <ImageView fitHeight="150.0" fitWidth="200.0" layoutY="450.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="150.0" fitWidth="200.0" layoutY="850.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../../../../../../BookFinder/src/main/resources/ltu_logga.jpg" />
          </image>
       </ImageView>
-      <Label layoutX="1107.0" layoutY="558.0" text="Vill du låna? Se till att" textFill="#f0f0f0">
+      <Label layoutX="1119.0" layoutY="932.0" text="Vill du låna? Se till att" textFill="#f0f0f0">
          <font>
             <Font size="14.0" />
          </font>
       </Label>
-      <Label alignment="CENTER" layoutY="470.0" prefWidth="1500.0" text="1 = Tillgänglig för lån, 0 = Ej tillgänglig för lån" textFill="#f0f0f0">
+      <Label alignment="CENTER" layoutX="-1.0" layoutY="865.0" prefWidth="1500.0" text="1 = Tillgänglig för lån, 0 = Ej tillgänglig för lån" textFill="#f0f0f0">
          <font>
             <Font size="14.0" />
          </font>
