--- a/src/main/resources/com/lms/librarymanagementsystem/account.fxml
+++ b/src/main/resources/com/lms/librarymanagementsystem/account.fxml
@@ -8,7 +8,7 @@
 
 <AnchorPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.lms.librarymanagementsystem.AccountController"
+            fx:controller="com.lms.librarymanagementsystem.controllers.AccountController"
             prefHeight="500.0" prefWidth="600.0">
 
 </AnchorPane>
