--- a/src/main/resources/com/lms/librarymanagementsystem/inventory.fxml
+++ b/src/main/resources/com/lms/librarymanagementsystem/inventory.fxml
@@ -1,14 +1,151 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.lms.librarymanagementsystem.InventoryController"
-            prefHeight="400.0" prefWidth="600.0">
-
-</AnchorPane>
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="650.0" prefWidth="1500.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.lms.librarymanagementsystem.controllers.InventoryController">
+   <children>
+      <AnchorPane prefHeight="475.0" prefWidth="1500.0" style="-fx-background-color: #011b3e;">
+         <children>
+            <Label alignment="CENTER" layoutY="15.0" prefWidth="1500.0" text="Hantera mediaartiklar genom att fylla i önskade attribut. Tryck sedan på valfri knapp. För att avsluta, tryck på knappen 'Klar'." textFill="#f0f0f0">
+               <font>
+                  <Font size="21.0" />
+               </font>
+            </Label>
+            <TableView fx:id="mediaTableView" layoutX="25.0" layoutY="55.0" prefHeight="400.0" prefWidth="1450.0" style="-fx-cursor: hand;">
+               <columns>
+                  <TableColumn fx:id="mediaIdColumn" maxWidth="35.0" minWidth="25.0" prefWidth="25.0" text="ID" />
+                  <TableColumn fx:id="titleColumn" maxWidth="1400.0" minWidth="100.0" prefWidth="100.0" text="Titel" />
+                  <TableColumn fx:id="formatColumn" maxWidth="45.0" minWidth="45.0" prefWidth="45.0" text="Format" />
+                  <TableColumn fx:id="categoryColumn" maxWidth="1000.0" minWidth="50.0" prefWidth="50.0" text="Kategori" />
+                  <TableColumn fx:id="descriptionColumn" maxWidth="1400.0" minWidth="100.0" prefWidth="100.0" text="Beskrivning" />
+                  <TableColumn fx:id="publisherColumn" maxWidth="200.0" minWidth="50.0" prefWidth="50.0" text="Utgivare" />
+                  <TableColumn fx:id="editionColumn" maxWidth="150.0" minWidth="50.0" prefWidth="50.0" text="Utgåva" />
+                  <TableColumn fx:id="authorColumn" maxWidth="1400.0" minWidth="50.0" prefWidth="50.0" text="Författare" />
+                  <TableColumn fx:id="isbnColumn" maxWidth="200.0" minWidth="50.0" prefWidth="50.0" text="ISBN" />
+                  <TableColumn fx:id="directorColumn" maxWidth="1500.0" minWidth="50.0" prefWidth="50.0" text="Regissör" />
+                  <TableColumn fx:id="actorColumn" maxWidth="1500.0" minWidth="100.0" prefWidth="100.0" text="Skådespelare" />
+                  <TableColumn fx:id="countryColumn" maxWidth="200.0" minWidth="25.0" prefWidth="25.0" text="Land" />
+                  <TableColumn fx:id="ratingColumn" maxWidth="100.0" minWidth="60.0" prefWidth="25.0" text="Rek. ålder" />
+                  <TableColumn fx:id="availableColumn" maxWidth="100.0" minWidth="70.0" prefWidth="10.0" text="Tillgänglig" />
+               </columns>
+               <columnResizePolicy>
+                  <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+               </columnResizePolicy>
+            </TableView>
+         </children>
+      </AnchorPane>
+      <AnchorPane prefHeight="200.0" prefWidth="1500.0" style="-fx-background-color: #011b3e;">
+         <children>
+            <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="-6.0" layoutY="19.0" pickOnBounds="true" preserveRatio="true" x="10.0">
+               <image>
+                  <Image url="@media/ltu_logga.jpg" />
+               </image>
+            </ImageView>
+            <TextField fx:id="titleTextField" layoutX="160.0" layoutY="45.0" prefWidth="225.0" promptText="Titel">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </TextField>
+            <TextField fx:id="formatTextField" layoutX="160.0" layoutY="75.0" prefWidth="225.0" promptText="Bok, Film, eller Journal">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </TextField>
+            <TextField fx:id="categoryTextField" layoutX="160.0" layoutY="105.0" prefWidth="225.0" promptText="Kategori">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </TextField>
+            <TextField fx:id="descriptionTextField" layoutX="160.0" layoutY="135.0" prefWidth="225.0" promptText="Beskrivning">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </TextField>
+            <TextField fx:id="publisherTextField" layoutX="385.0" layoutY="45.0" prefWidth="225.0" promptText="Utgivare">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </TextField>
+            <TextField fx:id="editionTextField" layoutX="385.0" layoutY="75.0" prefWidth="225.0" promptText="Utgåva">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </TextField>
+            <TextField fx:id="authorTextField" layoutX="385.0" layoutY="105.0" prefWidth="225.0" promptText="Författare">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </TextField>
+            <TextField fx:id="isbnTextField" layoutX="385.0" layoutY="135.0" prefWidth="225.0" promptText="ISBN - endast siffror">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </TextField>
+            <TextField fx:id="directorTextField" layoutX="610.0" layoutY="45.0" prefWidth="225.0" promptText="Regissör">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </TextField>
+            <TextField fx:id="actorTextField" layoutX="610.0" layoutY="75.0" prefWidth="225.0" promptText="Skådespelare">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </TextField>
+            <TextField fx:id="countryTextField" layoutX="610.0" layoutY="105.0" prefWidth="225.0" promptText="Land">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </TextField>
+            <TextField fx:id="ratingTextField" layoutX="610.0" layoutY="135.0" prefWidth="225.0" promptText="Rekommenderad ålder">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </TextField>
+            <TextField fx:id="availableTextField" layoutX="835.0" layoutY="45.0" prefWidth="225.0" promptText="Referens eller Ledig">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </TextField>
+            <TextField fx:id="mediaIdTextField" layoutX="835.0" layoutY="75.0" prefWidth="225.0" promptText="Media ID">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </TextField>
+            <Button fx:id="addMediaButton" alignment="CENTER" layoutX="1070.0" layoutY="45.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="225.0" style="-fx-background-color: #f0f0f0;" text="Lägg till media" textFill="#011b3e">
+               <font>
+                  <Font name="System Bold" size="16.0" />
+               </font>
+            </Button>
+            <Button fx:id="updateMediaButton" alignment="CENTER" layoutX="1070.0" layoutY="85.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="225.0" style="-fx-background-color: #f0f0f0;" text="Uppdatera media" textFill="#011b3e">
+               <font>
+                  <Font name="System Bold" size="16.0" />
+               </font>
+            </Button>
+            <Button fx:id="removeMediaButton" alignment="CENTER" layoutX="1070.0" layoutY="125.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="225.0" style="-fx-background-color: #f0f0f0;" text="Ta bort media" textFill="#011b3e">
+               <font>
+                  <Font name="System Bold" size="16.0" />
+               </font>
+            </Button>
+            <Button fx:id="finishButton" alignment="CENTER" layoutX="1300.0" layoutY="45.0" mnemonicParsing="false" prefHeight="115.0" prefWidth="175.0" style="-fx-background-color: #f0f0f0;" text="Klar" textFill="#011b3e">
+               <font>
+                  <Font name="System Bold" size="16.0" />
+               </font>
+            </Button>
+            <Label fx:id="messageLabel" alignment="CENTER" layoutY="11.0" prefHeight="25.0" prefWidth="1500.0" textFill="#f0f0f0">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Label>
+         </children>
+      </AnchorPane>
+   </children>
+</VBox>
