--- a/src/main/resources/com/lms/librarymanagementsystem/loan.fxml
+++ b/src/main/resources/com/lms/librarymanagementsystem/loan.fxml
@@ -42,20 +42,20 @@
       </Label>
       <TableView fx:id="loanTableView" layoutX="225.0" layoutY="515.0" prefHeight="200.0" prefWidth="400.0">
         <columns>
-          <TableColumn fx:id="loanTableloanidColumn" maxWidth="80.0" minWidth="80.0" text="Lån ID" />
-          <TableColumn fx:id="loanTablemediaidColumn" maxWidth="80.0" minWidth="80.0" text="Media ID" />
-            <TableColumn fx:id="loanTableuseridColumn" maxWidth="80.0" minWidth="80.0" text="User ID" />
-            <TableColumn fx:id="loanTableloandateColumn" maxWidth="80.0" minWidth="80.0" text="Låndatum" />
-            <TableColumn fx:id="loanTablereturndateColumn" maxWidth="80.0" minWidth="80.0" text="Returdatum" />
+          <TableColumn fx:id="loanLoanIdColumn" maxWidth="80.0" minWidth="80.0" text="Lån ID" />
+          <TableColumn fx:id="loanMediaIdColumn" maxWidth="80.0" minWidth="80.0" text="Media ID" />
+            <TableColumn fx:id="loanUserIdColumn" maxWidth="80.0" minWidth="80.0" text="User ID" />
+            <TableColumn fx:id="loanLoanDateColumn" maxWidth="80.0" minWidth="80.0" text="Låndatum" />
+            <TableColumn fx:id="loanReturnDateColumn" maxWidth="80.0" minWidth="80.0" text="Returdatum" />
         </columns>
       </TableView>
       <TableView fx:id="reserveTableView" layoutX="650.0" layoutY="515.0" prefHeight="200.0" prefWidth="400.0">
         <columns>
-          <TableColumn fx:id="resTableresidColumn" maxWidth="80.0" minWidth="80.0" text="Res.ID" />
-          <TableColumn fx:id="resTablemediaidColumn" maxWidth="80.0" minWidth="80.0" text="Media ID" />
-            <TableColumn fx:id="resTableuseridColumn" maxWidth="80.0" minWidth="80.0" text="User ID" />
-            <TableColumn fx:id="resTablequeueColumn" maxWidth="80.0" minWidth="80.0" text="Könummer" />
-            <TableColumn fx:id="resTableresdateColumn" maxWidth="80.0" minWidth="80.0" text="Res.Datum" />
+          <TableColumn fx:id="resResIdColumn" maxWidth="80.0" minWidth="80.0" text="Res.ID" />
+          <TableColumn fx:id="resMediaIdColumn" maxWidth="80.0" minWidth="80.0" text="Media ID" />
+            <TableColumn fx:id="resUserIdColumn" maxWidth="80.0" minWidth="80.0" text="User ID" />
+            <TableColumn fx:id="resQueueColumn" maxWidth="80.0" minWidth="80.0" text="Könummer" />
+            <TableColumn fx:id="resResDateColumn" maxWidth="80.0" minWidth="80.0" text="Res.Datum" />
         </columns>
       </TableView>
       <Button fx:id="loanButton" layoutX="313.0" layoutY="725.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="225.0" style="-fx-background-color: #f0f0f0;" text="Låna" textFill="#011b3e">
