--- a/src/main/resources/com/lms/librarymanagementsystem/inventory.fxml
+++ b/src/main/resources/com/lms/librarymanagementsystem/inventory.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1500.0" xmlns="http://javafx.com/javafx/17.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.lms.librarymanagementsystem.controllers.InventoryController">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1500.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.lms.librarymanagementsystem.controllers.InventoryController">
    <children>
       <AnchorPane prefHeight="500.0" prefWidth="1500.0" style="-fx-background-color: #011b3e;">
          <children>
@@ -170,6 +170,16 @@
                </font>
             </Label>
             <Label layoutX="160.0" layoutY="172.0" text="Sök den media du vill hantera eller följ direkt anvisningarna nedan om media är känd" textFill="#f0f0f0">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Label>
+            <Label alignment="CENTER_RIGHT" layoutY="10.0" prefWidth="750.0" text="Inloggad som : " textFill="#f0f0f0">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Label>
+            <Label fx:id="nameLabel" layoutX="750.0" layoutY="10.0" prefWidth="750.0" textFill="#f0f0f0">
                <font>
                   <Font size="14.0" />
                </font>
